[package]
name = "rust_chain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
bip32 = { version = "0.5.3", features = ["alloc"] }
bip39 = { version = "2.2.0", features = ["alloc"] }
